--- a/nextcloud/config.json
+++ b/nextcloud/config.json
@@ -5,7 +5,7 @@
   "description": "Nextcloud Home Assistant Add-on",
   "url": "https://github.com/elcajon/addon-nextcloud",
   "init": false,
-  "arch": ["aarch64", "amd64", "armhf", "armv7", "i386"],
+  "arch": ["aarch64", "amd64"],
   "options": {
     "log_level": "info"
   },
