--- a/nextcloud/config.json
+++ b/nextcloud/config.json
@@ -11,5 +11,11 @@
   },
   "schema": {
     "log_level": "list(trace|debug|info|notice|warning|error|fatal)"
+  }, 
+  "ports": {
+    "80/tcp": 8080
+  },
+  "ports_description": {
+    "80/tcp": "Nextcloud Web Port"
   }
 }
