--- a/nextcloud/rootfs/etc/nginx/nginx.conf
+++ b/nextcloud/rootfs/etc/nginx/nginx.conf
@@ -2,7 +2,7 @@
 
 user root;
 worker_processes 4;
-pid /run/nginx.pid;
+pid /var/run/nginx.pid;
 include /etc/nginx/modules/*.conf;
 
 events {
@@ -35,8 +35,8 @@ http {
 	# Logging Settings
 	##
 
-	access_log /data/log/nginx/access.log;
-	error_log /data/log/nginx/error.log;
+	access_log /share/nextcloud/access.log;
+	error_log /share/nextcloud/error.log;
 
 	##
 	# Gzip Settings
@@ -73,7 +73,7 @@ http {
 	# Virtual Host Configs
 	##
 	include /etc/nginx/http.d/*.conf;
-	include /data/nginx/site-confs/*;
+	include /etc/nginx/servers/*;
   
 }
 
