--- a/nextcloud/rootfs/etc/nginx/servers/default.conf
+++ b/nextcloud/rootfs/etc/nginx/servers/default.conf
@@ -1,9 +1,9 @@
 upstream php-handler {
-    server 127.0.0.1:9000;
+    server 127.0.0.1:9001;
 }
 server {
-    listen 80;
-    listen [::]:80;
+    listen 8080;
+    listen [::]:8080;
     server_name _;
 
     # Add headers to serve security related headers
@@ -41,7 +41,7 @@ server {
     # Remove X-Powered-By, which is an information leak
     fastcgi_hide_header X-Powered-By;
 
-    root /data/www/nextcloud/;
+    root /data/nextcloud/;
 
     # display real ip in nginx logs when connected through reverse proxy via docker network
     set_real_ip_from 172.0.0.0/8;
