--- a/nextcloud/rootfs/etc/nginx/nginx.conf
+++ b/nextcloud/rootfs/etc/nginx/nginx.conf
@@ -35,8 +35,8 @@ http {
 	# Logging Settings
 	##
 
-	access_log /share/nextcloud/access.log;
-	error_log /share/nextcloud/error.log;
+	#access_log /share/nextcloud/access.log;
+	#error_log /share/nextcloud/error.log;
 
 	##
 	# Gzip Settings
@@ -74,7 +74,7 @@ http {
 	##
 	include /etc/nginx/http.d/*.conf;
 	include /etc/nginx/servers/*;
-  
+	
 }
 
 daemon off;
