--- a/nextcloud/rootfs/etc/nginx/servers/default.conf
+++ b/nextcloud/rootfs/etc/nginx/servers/default.conf
@@ -41,7 +41,7 @@ server {
     # Remove X-Powered-By, which is an information leak
     fastcgi_hide_header X-Powered-By;
 
-    root /data/nextcloud/;
+    root /app/;
 
     # display real ip in nginx logs when connected through reverse proxy via docker network
     set_real_ip_from 172.0.0.0/8;
